deployment/deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: proxy
  namespace: tfb-servers
  annotations:
  #  "mc-router.itzg.me/externalServerName": "mc.theflyingbirds.net"
    metallb.universe.tf/allow-shared-ip: "mykey-65.108.8.46"
spec:
  type: LoadBalancer
  loadBalancerIP: 65.108.8.46
  ports:
    - name: minecraft
      port: 25565
      targetPort: 25565
    - name: plan
      port: 8804
      targetPort: 8804
  selector:
    run: proxy
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: proxy
  namespace: tfb-servers
  labels:
    run: proxy
spec:
  serviceName: "proxy"
  replicas: 1
  selector:
    matchLabels:
      run: proxy
  template:
    metadata:
      labels:
        run: proxy
    spec:
      securityContext:
        runAsUser: 1000
        fsGroup: 1000
      volumes:
      - name: git-repo-volume
        emptyDir: {}
      - name: git-secret-volume
        secret:
          secretName: git-secret
          defaultMode: 256
      - name: gradle-credentials
        secret:
          secretName: gradle-credentials
      containers:
      - name: proxy
        image: itzg/bungeecord:java21
        ports:
          - containerPort: 25565
          - containerPort: 8804
        command: ["/bin/sh", "-c"]
        args: ["apt-get update && apt-get install -y screen && screen -dmS minecraft /start && tail -f /dev/null"]
        volumeMounts:
          - name: proxy-pv
            mountPath: /server
          - name: git-repo-volume
            mountPath: /git-data
        resources:
          requests:
            memory: "4Gi"
        readinessProbe:
          exec:
            command: [ "/usr/local/bin/mc-monitor", "status", "--host", "localhost" ]
          initialDelaySeconds: 20
          periodSeconds: 5
          failureThreshold: 20
        livenessProbe:
          exec:
            command: ["/usr/local/bin/mc-monitor", "status", "--host", "localhost"]
          initialDelaySeconds: 120
          periodSeconds: 60
  volumeClaimTemplates:
  - metadata:
      name: proxy-pv
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 10Gi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plan-ingress
  namespace: tfb-servers
  annotations:
    cert-manager.io/cluster-issuer: theflyingbirds-prod
spec:
  tls:
  - hosts:
    - stats.theflyingbirds.net
    secretName: plan-tls
  rules:
  - host: stats.theflyingbirds.net
    http:
      paths:
      - backend:
          service:
            name: proxy
            port:
              number: 8804
        path: /
        pathType: Prefix
